--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -168,6 +168,12 @@
     <Compile Include="Instructions\Roundss.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
+    <Compile Include="Instructions\Sbb32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Instructions\SbbConst32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
     <Compile Include="Instructions\Shld32.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
@@ -501,7 +507,6 @@
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
     <Compile Include="Instructions\Sar.cs" />
-    <Compile Include="Instructions\Sbb.cs" />
     <Compile Include="Instructions\Setcc.cs" />
     <Compile Include="Instructions\Shl.cs" />
     <Compile Include="Instructions\Shr.cs" />
