--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -180,6 +180,15 @@
     <Compile Include="Instructions\ShldConst32.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
+    <Compile Include="Instructions\Shr32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Instructions\ShrConst32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Instructions\ShrConstOne32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
     <Compile Include="Instructions\Shrd32.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
@@ -509,7 +518,6 @@
     <Compile Include="Instructions\Sar.cs" />
     <Compile Include="Instructions\Setcc.cs" />
     <Compile Include="Instructions\Shl.cs" />
-    <Compile Include="Instructions\Shr.cs" />
     <Compile Include="Instructions\Ucomisd.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
