--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -174,6 +174,15 @@
     <Compile Include="Instructions\SbbConst32.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
+    <Compile Include="Instructions\Shl32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Instructions\ShlConst32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Instructions\ShlConstOne32.cs">
+      <DependentUpon>X86Instructions.tt</DependentUpon>
+    </Compile>
     <Compile Include="Instructions\Shld32.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
@@ -517,7 +526,6 @@
     </Compile>
     <Compile Include="Instructions\Sar.cs" />
     <Compile Include="Instructions\Setcc.cs" />
-    <Compile Include="Instructions\Shl.cs" />
     <Compile Include="Instructions\Ucomisd.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
